# zeus

./: .gitignore  CMakeLists.txt
cmake/modules/: README.md
config/common/: logging.json.default  network.json.default
config/gateway/: gateway.json.default  gateway.prod.json
docs/: build-options.md  enhanced-signal-handling.md  gateway-command-line-usage.md  index.html  structured_logging.md
docs/api/: index.html
docs/css/: style.css
docs/development/: index.html
docs/getting-started/: build-guide.html  index.html  installation.html  tech-stack.html
docs/modules/: index.html
examples/: CMakeLists.txt
examples/basic_structured_logging/: CMakeLists.txt  basic_structured_logging_example.cpp
examples/business_scenarios/: CMakeLists.txt  business_scenarios_example.cpp
examples/custom_formatters/: CMakeLists.txt  custom_formatters_example.cpp
examples/enhanced_signal_handling/: CMakeLists.txt  enhanced_signal_demo  enhanced_signal_demo.cpp  gateway_with_enhanced_app  gateway_with_enhanced_app.cpp
examples/lua_binding_generator/: CMakeLists.txt  simple_test.hpp  test_manual_bindings.cpp
examples/performance_comparison/: CMakeLists.txt  performance_comparison_example.cpp
examples/simple_application/: CMakeLists.txt  simple_application_example.cpp
include/common/lua/: export_macros.h  export_macros.h.old
include/common/network/: connection.h  kcp_acceptor.h  kcp_connector.h  network_events.h  network_logger.h  tcp_acceptor.h  tcp_connector.h  zeus_network.h
include/common/network/http/: http_client.h  http_common.h  http_message.h  http_middleware.h  http_router.h  http_server.h
include/common/spdlog/: zeus_log_common.h  zeus_log_config.h  zeus_log_manager.h  zeus_structured_log.h
include/common/spdlog/structured/: field.h  structured_logger.h
include/common/utilities/: mutex_policy.h  singleton.h  string_utils.h  type_traits_utils.h
include/core/: zeus_application.h
include/core/app/: app_config.h  application.h  application_types.h  dependency_injector.h  service_factory.h  service_registry.h
include/core/app/config_providers/: redis_config_provider.h
include/gateway/: gateway_server.h  gateway_session.h  protocol_router.h
src/ai/: CMakeLists.txt
src/aoi/: CMakeLists.txt
src/chat/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/network/: CMakeLists.txt  connection.cpp  kcp_acceptor.cpp  kcp_connector.cpp  network_events.cpp  network_logger.cpp  tcp_acceptor.cpp  tcp_connector.cpp  zeus_network.cpp
src/common/network/http/: http_client.cpp  http_common.cpp  http_message.cpp  http_middleware.cpp  http_router.cpp  http_server.cpp
src/common/spdlog/: zeus_log_config.cpp  zeus_log_manager.cpp
src/common/spdlog/structured/: CMakeLists.txt  structured_logger.cpp
src/common/spdlog/structured/tests/: CMakeLists.txt  test_field.cpp
src/common/utilities/: CMakeLists.txt  example_usage.cpp  string_utils.cpp
src/core/app/: CMakeLists.txt  app_config.cpp  application.cpp  application_utils.cpp  dependency_injector.cpp  service_factory.cpp  service_registry.cpp
src/core/app/config_providers/: postgresql_config_provider.cpp  postgresql_config_provider.h  redis_config_provider.cpp
src/gateway/: CMakeLists.txt  gateway_server.cpp  gateway_session.cpp  main.cpp  protocol_router.cpp
src/gm/: CMakeLists.txt
src/logic/: CMakeLists.txt
src/login/: CMakeLists.txt
src/mail/: CMakeLists.txt
src/rank/: CMakeLists.txt
src/zone/: CMakeLists.txt
tests/: CMakeLists.txt
tests/basic/: CMakeLists.txt  basic_test.cpp
tests/lua_binding_generator/: CMakeLists.txt  README.md  TEST_GUIDE.md  simple_binding_test.cpp  test_bindings.hpp  test_bindings_impl.cpp  test_lua_script.lua
tests/network/: CMakeLists.txt
tests/network/basic/: CMakeLists.txt  test_network_basic.cpp
tests/network/http/: CMakeLists.txt  test_http_client.cpp  test_https_client.cpp
tests/network/integration/: CMakeLists.txt
tests/network/kcp/: CMakeLists.txt  test_kcp_acceptor.cpp  test_kcp_connector.cpp
tests/network/tcp/: CMakeLists.txt  test_tcp_acceptor.cpp  test_tcp_connector.cpp
tests/network_basic/: CMakeLists.txt  network_log_config.json  test_network_basic.cpp
tests/spdlog/: CMakeLists.txt
tests/spdlog/basic/: test_zeus_log.cpp
tests/spdlog/config/: CMakeLists.txt  test_config.cpp
tests/spdlog/multithread/: test_multithread.cpp
tests/spdlog/performance/: log_config.json
tests/spdlog_basic/: CMakeLists.txt
tests/spdlog_multithread/: CMakeLists.txt
tests/spdlog_performance/: CMakeLists.txt  test_performance.cpp
tests/utilities/: CMakeLists.txt
tests/utilities/singleton/: CMakeLists.txt  test_singleton_basic.cpp  test_singleton_policies.cpp  test_singleton_thread_safety.cpp
tests/utilities/string_utils/: CMakeLists.txt  test_string_utils_advanced.cpp  test_string_utils_basic.cpp  test_string_utils_datetime.cpp  test_string_utils_parsing.cpp
tools/: CMakeLists.txt  rename_network_classes.sh
tools/lua_binding_generator/: CMakeLists.txt  README.md  main.cpp
tools/lua_binding_generator/examples/: basic_test.h  basic_usage_example.h  comprehensive_test.h  comprehensive_test_fixed.h  lua_bindings_config.json  real_test.h  simple_test.h
tools/lua_binding_generator/include/lua_binding_generator/: ast_visitor.h  compiler_detector.h  direct_binding_generator.h  dynamic_compilation_database.h  incremental_generator.h  smart_inference_engine.h
tools/lua_binding_generator/src/: ast_visitor.cpp  compiler_detector.cpp  direct_binding_generator.cpp  dynamic_compilation_database.cpp  incremental_generator.cpp  smart_inference_engine.cpp
