# Zeus Logic Module CMakeLists.txt
cmake_minimum_required(VERSION 3.16)

message(STATUS "=== Logic Module Configuration ===")

# Logic module sources (to be implemented)
set(LOGIC_SOURCES
    # logic_main.cpp
    # logic_server.cpp
    # game_logic.cpp
    # player_manager.cpp
    # world_manager.cpp
)

# Logic module headers (to be implemented)
set(LOGIC_HEADERS
    # ${CMAKE_SOURCE_DIR}/include/logic/logic_server.h
    # ${CMAKE_SOURCE_DIR}/include/logic/game_logic.h
    # ${CMAKE_SOURCE_DIR}/include/logic/player_manager.h
    # ${CMAKE_SOURCE_DIR}/include/logic/world_manager.h
)

# TODO: Uncomment when source files are implemented
# Create the logic library
# add_library(logic_module ${LOGIC_SOURCES} ${LOGIC_HEADERS})

# Set target properties
# set_target_properties(logic_module PROPERTIES
#     CXX_STANDARD 17
#     CXX_STANDARD_REQUIRED ON
#     CXX_EXTENSIONS OFF
#     OUTPUT_NAME "logic_module"
# )

# Include directories
# target_include_directories(logic_module
#     PUBLIC
#         ${CMAKE_SOURCE_DIR}/include
#     PRIVATE
#         ${CMAKE_CURRENT_SOURCE_DIR}
# )

# Link dependencies
# target_link_libraries(logic_module
#     PUBLIC
#         common_network  # Zeus networking
#         common_spdlog   # Zeus logging
# )

message(STATUS "Logic module configured (placeholder)")
message(STATUS "====================================")