# Zeus Mail Module CMakeLists.txt
cmake_minimum_required(VERSION 3.16)

message(STATUS "=== Mail Module Configuration ===")

# Mail module sources (to be implemented)
set(MAIL_SOURCES
    # mail_main.cpp
    # mail_server.cpp
    # mail_service.cpp
    # mail_manager.cpp
    # mail_storage.cpp
)

# Mail module headers (to be implemented)
set(MAIL_HEADERS
    # ${CMAKE_SOURCE_DIR}/include/mail/mail_server.h
    # ${CMAKE_SOURCE_DIR}/include/mail/mail_service.h
    # ${CMAKE_SOURCE_DIR}/include/mail/mail_manager.h
    # ${CMAKE_SOURCE_DIR}/include/mail/mail_storage.h
)

# TODO: Uncomment when source files are implemented
# Create the mail library
# add_library(mail_module ${MAIL_SOURCES} ${MAIL_HEADERS})

# Set target properties
# set_target_properties(mail_module PROPERTIES
#     CXX_STANDARD 17
#     CXX_STANDARD_REQUIRED ON
#     CXX_EXTENSIONS OFF
#     OUTPUT_NAME "mail_module"
# )

# Include directories
# target_include_directories(mail_module
#     PUBLIC
#         ${CMAKE_SOURCE_DIR}/include
#     PRIVATE
#         ${CMAKE_CURRENT_SOURCE_DIR}
# )

# Link dependencies
# target_link_libraries(mail_module
#     PUBLIC
#         common_network  # Zeus networking
#         common_spdlog   # Zeus logging
# )

message(STATUS "Mail module configured (placeholder)")
message(STATUS "=====================================")