# Zeus Rank Module CMakeLists.txt
cmake_minimum_required(VERSION 3.16)

message(STATUS "=== Rank Module Configuration ===")

# Rank module sources (to be implemented)
set(RANK_SOURCES
    # rank_main.cpp
    # rank_server.cpp
    # rank_service.cpp
    # leaderboard.cpp
    # rank_calculator.cpp
)

# Rank module headers (to be implemented)
set(RANK_HEADERS
    # ${CMAKE_SOURCE_DIR}/include/rank/rank_server.h
    # ${CMAKE_SOURCE_DIR}/include/rank/rank_service.h
    # ${CMAKE_SOURCE_DIR}/include/rank/leaderboard.h
    # ${CMAKE_SOURCE_DIR}/include/rank/rank_calculator.h
)

# TODO: Uncomment when source files are implemented
# Create the rank library
# add_library(rank_module ${RANK_SOURCES} ${RANK_HEADERS})

# Set target properties
# set_target_properties(rank_module PROPERTIES
#     CXX_STANDARD 17
#     CXX_STANDARD_REQUIRED ON
#     CXX_EXTENSIONS OFF
#     OUTPUT_NAME "rank_module"
# )

# Include directories
# target_include_directories(rank_module
#     PUBLIC
#         ${CMAKE_SOURCE_DIR}/include
#     PRIVATE
#         ${CMAKE_CURRENT_SOURCE_DIR}
# )

# Link dependencies
# target_link_libraries(rank_module
#     PUBLIC
#         common_network  # Zeus networking
#         common_spdlog   # Zeus logging
# )

message(STATUS "Rank module configured (placeholder)")
message(STATUS "=====================================")